<resources>
    <string name="app_name">ThermoPi</string>
    <string name="scheduleButton">Schedule</string>
    <string name="temperatureButton">Temperature</string>
    <string name="enableBoost">Enable Boost</string>
    <string name="disableBoost">Disable Boost</string>
    <string name="holidayButton">Holiday</string>
    <string name="settingsButton">Settings</string>
    <string name="currentTemperatureText">0°C</string>
    <string name="targetTemperatureText">0°C</string>
    <string name="formattedTemperature">%.0f°C</string>
    <string name="formattedTime">%02d:%02d</string>
    <string name="confirmButton">Confirm</string>
    <string name="scheduleHeading">Schedule</string>
    <string name="failedToRetrieveData">Failed to retrieve data from to server</string>
    <string name="failedToUpdateData">Failed to update</string>
    <string name="submitSchedule">Submit Schedule</string>
    <string name="scheduleUpdateSuccess">Schedule updated successfully</string>
    <string name="targetTempUpdateSuccess">Target temperature updated successfully</string>
    <string name="boostDisabled">Boost disabled</string>
    <string name="boostEnabled">Boost enabled until %s</string>


    <string name="title_activity_schedule_manager">Schedule</string>
    <string name="title_activity_target_temperature_control">Target Temperature</string>
    <string name="title_activity_holiday_manager">Holidays</string>
    <string name="title_activity_settings">Settings</string>





    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
</resources>
